# TranspileAI

./: Cargo.toml  README.md
examples/simple_math/: impl.py  impl.rs
proto/: transpile_test.proto
python/: generate_proto.sh  requirements.txt  server.py
rust/: Cargo.toml  build.rs
rust/src/: examples.rs  server.rs
test-runner/: Cargo.toml  build.rs
test-runner/src/: main.rs
test-runner/test-defs/: simple_math.yaml
